bizinikiwi/pezframe/support/test/tests/pezpallet_ui/trait_constant_invalid_bound_lifetime.stderr
error: Invalid usage of `#[pezpallet::constant]`: Expected a type argument
  --> tests/pezpallet_ui/trait_constant_invalid_bound_lifetime.rs:26:15
   |
26 |         type U: Get<'static>;
   |                     ^^^^^^^
